FIX #62 - add a component to contact tenant or team admin

--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -240,3 +240,13 @@ img:hover+.changePicture,.changePicture:hover{
     font-size: 1.8rem;
   }
 }
+
+.ohnohoney {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 0;
+  width: 0;
+  z-index: -1;
+}
