--- a/daikoku/app/views/index.scala.html
+++ b/daikoku/app/views/index.scala.html
@@ -5,7 +5,7 @@
 @import fr.maif.otoroshi.daikoku.domain.Tenant
 @import fr.maif.otoroshi.daikoku.domain.Team
 
-@(user: User, session: UserSession,tenant: Tenant, host: String, env: Env)
+@(user: User, session: UserSession,tenant: Tenant, host: String, env: Env, isTenantAdmin: Boolean)
 
 @customStyle = {
   @(tenant.colorTheme())
@@ -44,7 +44,8 @@
       @Html(play.api.libs.json.Json.prettyPrint(tenant.toUiPayload(env))),
       @Html(play.api.libs.json.Json.prettyPrint(session.impersonatorJson())),
       @Html(play.api.libs.json.Json.prettyPrint(session.asSimpleJson)),
-      '@(fr.maif.otoroshi.daikoku.ctrls.routes.LoginController.login(tenant.authProvider.name).url)'
+      '@(fr.maif.otoroshi.daikoku.ctrls.routes.LoginController.login(tenant.authProvider.name).url)',
+      @(isTenantAdmin)
     )
   </script>
 }
