--- a/daikoku/javascript/src/style/components/btn.scss
+++ b/daikoku/javascript/src/style/components/btn.scss
@@ -53,7 +53,7 @@ button {
   color: #fff;
 }
 
-.btn-outline-success.disabled,.btn-outline-primary.disabled, .btn-outline-primary:disabled{
+.btn-outline-success.disabled,.btn-outline-success:disabled,.btn-outline-primary.disabled, .btn-outline-primary:disabled{
  // background-color: #d1d1d1;
   border-color:#9e9e9e;
   color:#9e9e9e;
