--- a/daikoku/javascript/src/style/layout/navbar.scss
+++ b/daikoku/javascript/src/style/layout/navbar.scss
@@ -38,7 +38,7 @@ a.navbar-brand, #teamSelector:hover {
 }
 
 .period-select:hover>div,.general-search:hover>div,.add-member-select:hover>div{
-  cursor: pointer;
+  cursor: pointer !important;
 }
 
 .general-search>div{
