Upgrade javascript libs version

--- a/daikoku/app/views/index.scala.html
+++ b/daikoku/app/views/index.scala.html
@@ -33,7 +33,7 @@
   }
   <!--script src="https://cdn.jsdelivr.net/npm/redoc/bundles/redoc.standalone.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/redoc@@next/bundles/redoc.standalone.js"> </script-->
-  <script src="https://cdn.jsdelivr.net/npm/redoc@@v2.0.0-rc.5/bundles/redoc.standalone.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/redoc@@next/bundles/redoc.standalone.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swagger-editor-dist@@3.6.31/swagger-editor-bundle.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swagger-editor-dist@@3.6.31/swagger-editor-standalone-preset.js"></script>
   <!--script src="https://unpkg.com/pdfjs-dist/build/pdf.min.js"></script>
