--- a/daikoku/javascript/src/style/components/reactTable.scss
+++ b/daikoku/javascript/src/style/components/reactTable.scss
@@ -1,4 +1,31 @@
-
+.reactTableV7 {
+	width: 100%;
+	font-size: 14px;
+	thead{
+		box-shadow:0px 5px 5px 0px rgba(0, 0, 0, 0.1)
+	}
+	thead th {
+		border-right-style: solid;
+		border-right-width: 1px;
+		border-right-color: rgba(0,0,0,0.1);
+		padding-left: 5px;
+	}
+	thead th:last-child {
+		border-right:none;
+	}
+	tr:nth-child(even){
+		background-color: rgba(0, 0, 0, 0.03);
+	}
+	td{
+		padding: 7px 5px;
+		border-right-color: rgba(0, 0, 0, 0.02);
+		border-right-style: solid;
+		border-right-width: 1px;
+	}
+	.switch--loaded label{
+		margin-bottom: 0px;
+	}
+}
 .ReactTable {
 	border: none !important;
   font-size: 14px;
