--- a/daikoku/javascript/src/style/components/reactTable.scss
+++ b/daikoku/javascript/src/style/components/reactTable.scss
@@ -9,6 +9,13 @@
 		border-right-width: 1px;
 		border-right-color: rgba(0,0,0,0.1);
 		padding-left: 5px;
+
+		&.--sort-asc {
+			box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.6);
+		}
+		&.--sort-desc {
+			box-shadow: inset 0 -3px 0 0 rgba(0,0,0,0.6);
+		}
 	}
 	thead th:last-child {
 		border-right:none;
