--- a/daikoku/javascript/src/style/components/pagination.scss
+++ b/daikoku/javascript/src/style/components/pagination.scss
@@ -12,8 +12,8 @@
   }
 
   li.page-selector {
-    min-width: 30px;
-    height: 30px;
+    min-width: 36px;
+    height: 36px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -38,6 +38,7 @@
       width: 100%;
       height: 100%;
       justify-content: center;
+      align-items: center;
     }
   }
 
@@ -48,8 +49,8 @@
   li.next, li.previous {
     padding: 0.5rem;
     border: 1px solid $pagination-border-color;
-    min-width: 30px;
-        height: 30px;
+    min-width: 36px;
+    height: 36px;
     cursor: pointer;
     display: flex;
     align-items: center;
