--- a/daikoku/javascript/src/style/components/reactTable.scss
+++ b/daikoku/javascript/src/style/components/reactTable.scss
@@ -9,7 +9,8 @@
 		border-right-width: 1px;
 		border-right-color: rgba(0,0,0,0.1);
 		padding-left: 5px;
-
+		padding-top: 5px;
+		vertical-align: baseline;
 		&.--sort-asc {
 			box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.6);
 		}
