migration to TableWithV7

--- a/daikoku/javascript/src/style/components/reactTable.scss
+++ b/daikoku/javascript/src/style/components/reactTable.scss
@@ -1,6 +1,7 @@
 .reactTableV7 {
 	width: 100%;
 	font-size: 14px;
+	box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.1);
 	thead{
 		box-shadow:0px 5px 5px 0px rgba(0, 0, 0, 0.1)
 	}
