--- a/daikoku/javascript/src/style/components/reactTable.scss
+++ b/daikoku/javascript/src/style/components/reactTable.scss
@@ -122,3 +122,20 @@
 		text-decoration: none;
 	}
 
+	.resizer {
+		display: inline-block;
+		background: blue;
+		width: 10px;
+		height: 100%;
+		position: absolute;
+		right: 0;
+		top: 0;
+		transform: translateX(50%);
+		z-index: 1;
+		touch-action:none;
+
+		&.isResizing {
+			background: red;
+		}
+	}
+
