--- a/daikoku/javascript/src/style/components/pagination.scss
+++ b/daikoku/javascript/src/style/components/pagination.scss
@@ -5,7 +5,7 @@
   list-style-type: none;
   justify-content: center;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 20px;
 
   li, li:not(.next,.previous) a {
     color: $pagination-text-color;
@@ -38,6 +38,7 @@
       width: 100%;
       height: 100%;
       justify-content: center;
+      align-items: center;
     }
   }
 
