--- a/daikoku/javascript/src/style/components/reactTable.scss
+++ b/daikoku/javascript/src/style/components/reactTable.scss
@@ -1,60 +1,141 @@
+.reactTableV7 {
+	width: 100%;
+	font-size: 14px;
+	box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.1);
+	thead{
+		box-shadow:0px 5px 5px 0px rgba(0, 0, 0, 0.1)
+	}
+	thead th {
+		border-right-style: solid;
+		border-right-width: 1px;
+		border-right-color: rgba(0,0,0,0.1);
+		padding-left: 5px;
+		padding-top: 5px;
+		vertical-align: baseline;
+		&.--sort-asc {
+			box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.6);
+		}
+		&.--sort-desc {
+			box-shadow: inset 0 -3px 0 0 rgba(0,0,0,0.6);
+		}
+	}
+	thead th:last-child {
+		border-right:none;
+	}
+	tr:nth-child(even){
+		background-color: rgba(0, 0, 0, 0.03);
+	}
+	td{
+		padding: 7px 5px;
+		border-right-color: rgba(0, 0, 0, 0.02);
+		border-right-style: solid;
+		border-right-width: 1px;
+	}
+	.switch--loaded label{
+		margin-bottom: 0px;
+	}
+}
+
+.reactSelect-pagination {
+	.reactSelect__indicator-separator {
+		margin:0px;
+	}
+	.reactSelect__value-container {
+		margin-top: -2px;
+		padding: 0px 8px;
+	}
+	.reactSelect__indicator{
+		padding: 0px 8px;
+	}
+}
+
+.table-filter-suppress{
+	transform:rotate(90deg);
+	padding: .2rem .2rem;
+	&:before{
+		content:"";
+		position:absolute;
+		border-top:2px solid var(--error-color, #ff6347);
+		width:36px;
+		transform: rotate(45deg);
+		transform-origin: 0% 0%;
+	}
+}
 
 .ReactTable {
-	border: none !important;
-  font-size: 14px;
-	background-color: $form-bg-color;
-}
-.ReactTable input {
-	border-radius: 4px;
-	border: none;
-}
+		border: none !important;
+		font-size: 14px;
+		background-color: $form-bg-color;
+	}
+	.ReactTable input {
+		border-radius: 4px;
+		border: none;
+	}
 
-.ReactTable	.rt-td {
+	.ReactTable	.rt-td {
 		/* height: 40px !important; */
-}
+	}
 
-.ReactTable .-pageSizeOptions {
+	.ReactTable .-pageSizeOptions {
 		display: none !important;
-}
+	}
 
-.ReactTable	.-next .-btn,
-.ReactTable	.-previous .-btn {
+	.ReactTable	.-next .-btn,
+	.ReactTable	.-previous .-btn {
 		border-radius: 4px !important;
-}
+	}
 
-.ReactTable	.-pagination {
+	.ReactTable	.-pagination {
 		justify-content: center;
-}
+	}
 
-.ReactTable	.-pagination .-previous,
- .ReactTable .-pagination .-next {
+	.ReactTable	.-pagination .-previous,
+	.ReactTable .-pagination .-next {
 		flex: none;
-}
+	}
 
-.ReactTable	.-pagination .-center {
+	.ReactTable	.-pagination .-center {
 		flex: none;
 		border: 1px solid rgba(181, 179, 179, .5);
 		border-radius: 4px;
 		margin-left: 5px;
 		margin-right: 5px;
-}
+	}
 
-.ReactTable	.-pagination .-btn:not([disabled]):hover {
+	.ReactTable	.-pagination .-btn:not([disabled]):hover {
 		background: #494948;
-}
+	}
 
-.ReactTable 	span.label.table-env {
-	  margin-right: 10px;
-}
+	.ReactTable 	span.label.table-env {
+		margin-right: 10px;
+	}
 
-.ReactTable select{
+	.ReactTable select{
 		background: none;
-}
+	}
 
-.ReactTable a {
-  color : $menu-text-color;
-}
+	.ReactTable a {
+		color : $menu-text-color;
+	}
 
-.ReactTable a:hover {
-  text-decoration: none;
-}
+	.ReactTable a:hover {
+		text-decoration: none;
+	}
+
+	.resizer {
+		display: inline-block;
+		background: blue;
+		width: 10px;
+		height: 100%;
+		position: absolute;
+		right: 0;
+		top: 0;
+		transform: translateX(50%);
+		z-index: 1;
+		touch-action:none;
+
+		&.isResizing {
+			background: red;
+		}
+	}
+
