fix calendar btn color

--- a/daikoku/javascript/src/style/components/antCalandar.scss
+++ b/daikoku/javascript/src/style/components/antCalandar.scss
@@ -3,3 +3,13 @@
 .ant-calendar-range-picker-input{
   color:$form-text-color;
 }
+
+.ant-btn {
+  border-radius: 5px;
+  border-width: 1px;
+}
+
+.ant-btn-primary{
+  border-color: #007bff;
+  color:#007bff;
+}
