FIX #94 - don't disppay member tile for team backoffice if it's a personal team

--- a/daikoku/javascript/src/style/components/tiles.scss
+++ b/daikoku/javascript/src/style/components/tiles.scss
@@ -3,6 +3,10 @@
   text-decoration: none;
 }
 
+.home-tile:disabled, .home-tile[disabled] {
+  cursor: auto;
+}
+
 .home-tiles .alert {
   padding-top: 0.3rem;
   padding-bottom: 0.3rem;
