WIP #43 - UI component works basically

--- a/daikoku/javascript/src/style/components/discussion.scss
+++ b/daikoku/javascript/src/style/components/discussion.scss
@@ -33,6 +33,7 @@
     padding: 5px;
     display: flex;
     flex-direction: column;
+    //todo: define a max height and then scroll
   }
 
   .discussion-form {
