add color for menu divider

--- a/daikoku/javascript/src/style/variables.scss
+++ b/daikoku/javascript/src/style/variables.scss
@@ -20,6 +20,7 @@ $menu-bg-color:#{"var(--menu-bg-color, #fff)"};//menu
 $menu-text-color:#{"var(--menu-text-color, #212529)"};//menu
 $menu-text-hover-bg-color:#{"var(--menu-text-hover-bg-color, #9bb0c5)"};//menu
 $menu-text-hover-color:#{"var(--menu-text-hover-color, #fff)"};//menu
+$menu-divider-color:#{"var(--menu-divider-color, #e9ecef)"};//menu
 
 $btn-bg-color: #{"var(--btn-bg-color, #fff)"};//button
 $btn-bg-hover-color: #{"var(--btn-bg-hover-color, #fff)"};//button
