--- a/daikoku/javascript/src/style/layout/navbar.scss
+++ b/daikoku/javascript/src/style/layout/navbar.scss
@@ -32,7 +32,9 @@ a.navbar-brand, #teamSelector:hover {
     color: $menu-text-hover-color
   }
 }
-
+.dropdown-divider{
+  border-color: $menu-divider-color;
+}
 .add-member-select, .general-search{
   width: 400px;
 }
@@ -42,8 +44,8 @@ a.navbar-brand, #teamSelector:hover {
 }
 
 .general-search>div{
-  border-top-left-radius: 0px;
-  border-bottom-left-radius: 0px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
   background-color: $form-bg-color;
   color:$form-text-color;
   border-color:$form-border-color;
