add style for heading in select

--- a/daikoku/javascript/src/style/components/input.scss
+++ b/daikoku/javascript/src/style/components/input.scss
@@ -40,3 +40,7 @@
 .reactSelect__option:hover{
     cursor: pointer;
 }
+
+.reactSelect__group-heading{
+    color:$form-select-heading-color !important;
+}
