add bold to selected content in select

--- a/daikoku/javascript/src/style/components/input.scss
+++ b/daikoku/javascript/src/style/components/input.scss
@@ -35,6 +35,7 @@
 .reactSelect__option--is-selected{
     background-color: $form-select-focused-color !important;
     color:$form-select-focused-text-color !important;
+    font-weight: bolder!important;
 }
 
 .reactSelect__option:hover{
