--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -33,3 +33,4 @@
 @import "components/recharts.scss";
 @import 'components/footer.scss';
 @import 'components/discussion.scss';
+@import 'components/messages.scss';
