--- a/daikoku/javascript/src/style/components/discussion.scss
+++ b/daikoku/javascript/src/style/components/discussion.scss
@@ -32,7 +32,7 @@
     width: 100%;
     padding: 5px;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     max-height: 250px;
     overflow-y: scroll;
   }
