--- a/daikoku/javascript/src/style/components/discussion.scss
+++ b/daikoku/javascript/src/style/components/discussion.scss
@@ -35,20 +35,22 @@
     flex-direction: column-reverse;
     max-height: 250px;
     overflow-y: scroll;
+    border: 1px solid dodgerblue;
   }
 }
 
 .discussion-form {
     width: 100%;
-    border-top: 1px solid #ccc;
+    border: 1px solid dodgerblue;
     display: flex;
     flex-direction: row;
-
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    padding: 10px;
+    background: #fff;
     input {
-      border: none;
       flex-grow: 2;
-      padding: 0 20px;
-      height: 50px;
+      border: 1px solid rgba(30,144,255,0.5);
     }
 
     .send-button {
@@ -62,7 +64,7 @@
       cursor: pointer;
       background-color: #fff;
       color: dodgerblue;
-
+      outline: none;
       &:hover {
         color: lighten($color: dodgerblue, $amount: 20) ;
       }
