--- a/daikoku/javascript/src/style/variables.scss
+++ b/daikoku/javascript/src/style/variables.scss
@@ -52,6 +52,10 @@ $error-color: #{"var(--error-color, #ff6347)"};//status
 $error-hover-color: #{"var(--error--hover-color, #ffa494)"};//status
 $success-color: #{"var(--success-color, #4F8A10)"};//status
 $success-hover-color: #{"var(--success-hover-color, #76cf18)"};//status
+$info-color: #{"var(--info-color, #17a2b8)"};//status
+$warning-color: #{"var(--warning-color, #ffc107)"};//status
+$danger-color: #{"var(--danger-color, #dc3545)"};//status
+$success-color: #{"var(--success-color, #28a745)"};//status
 
 $pagination-text-color:#{"var(--pagination-text-color, #586069)"};//pagination
 $pagination-border-color:#{"var(--pagination-border-color, #586069)"};//pagination
