--- a/daikoku/javascript/src/style/components/notification.scss
+++ b/daikoku/javascript/src/style/components/notification.scss
@@ -21,7 +21,7 @@
   position: absolute;
   top: -3px;
   right: 10px;
-  background-color: tomato;
+  background-color: $danger-color;
   border-radius: 50%;
   border: 2px solid $navbar-bg-color;
   box-sizing: content-box;
