improve color for message

--- a/daikoku/javascript/src/style/components/discussion.scss
+++ b/daikoku/javascript/src/style/components/discussion.scss
@@ -5,6 +5,7 @@
   &__active:first-child {
     background-color:$menu-text-hover-bg-color;
     border-left: 2px solid $danger-color;
+    color:$menu-text-hover-color;
   }
 }
 .messages-content{
