--- a/daikoku/javascript/src/style/components/discussion.scss
+++ b/daikoku/javascript/src/style/components/discussion.scss
@@ -7,6 +7,12 @@
     border-left: 2px solid $danger-color;
     color:$menu-text-hover-color;
   }
+
+  .user-avatar {
+    border-radius:50%;
+    border: 3px solid #fff;
+    box-shadow: 0px 0px 0px 3px lightgrey;
+  }
 }
 .messages-content{
   width: 75%;
