--- a/daikoku/javascript/src/style/components/avatarWithAction.scss
+++ b/daikoku/javascript/src/style/components/avatarWithAction.scss
@@ -1,3 +1,15 @@
+.avatar__container {
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    border: 3px solid #fff;
+    box-shadow: 0px 0px 0px 3px lightgrey;
+    transition: all .2s ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
 
 .avatar-with-action {
     cursor: pointer;
@@ -31,19 +43,6 @@
             display: flex;
             align-items: center;
             justify-content: center;
-        }
-
-        .avatar-with-action__container {
-            width: 100px;
-            height: 100px;
-            border-radius: 50px;
-            border: 3px solid #fff;
-            box-shadow: 0px 0px 0px 3px lightgrey;
-            transition: all .2s ease-in-out;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
         }
 
         .avatar-with-action__avatar {
@@ -132,5 +131,5 @@
 }
 
 .delete-icon:hover {
-    color: tomato;
+    color: $danger-color;
 }
