--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -32,3 +32,5 @@
 @import 'swagger';
 @import "components/recharts.scss";
 @import 'components/footer.scss';
+@import 'components/discussion.scss';
+@import 'components/messages.scss';
