--- a/daikoku/javascript/src/style/components/apicard.scss
+++ b/daikoku/javascript/src/style/components/apicard.scss
@@ -67,6 +67,11 @@
   position: relative;
 }
 
+.plan-name {
+  font-size: 1.75rem;
+  font-weight: 500;
+}
+
 .plan-quotas, .plan-pricing {
   font-size: .75rem;
 }
