--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -67,8 +67,13 @@ main {
   font-size: 0.5em;
 }
 
+.lead {
+  white-space: pre-wrap;
+}
+
 .api-description > p {
   text-align: justify;
+  white-space: pre-wrap;
 }
 
 a.nav-link.active {
