--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -2,6 +2,7 @@ body {
   font-family: Custom, Raleway, Helvetica, sans-serif;
   background-color: $body-bg-color;
   color:$body-text-color;
+  font-size: 1rem;
 }
 //remove blue border on chrome
 *:focus {
