set the new admin select over the avatar image

--- a/daikoku/javascript/src/style/layout/navbar.scss
+++ b/daikoku/javascript/src/style/layout/navbar.scss
@@ -39,6 +39,10 @@ a.navbar-brand, #teamSelector:hover {
   width: 400px;
 }
 
+.add-member-select {
+  z-index: 100;
+}
+
 .period-select:hover>div,.general-search:hover>div,.add-member-select:hover>div{
   cursor: pointer !important;
 }
