--- a/daikoku/javascript/src/style/components/badge.scss
+++ b/daikoku/javascript/src/style/components/badge.scss
@@ -1,7 +1,7 @@
-.badge-warning {
-  background-color: $badge-tags-bg-color;
-  color:$badge-tags-text-color;
-  &:hover{
-    background-color: $badge-tags-bg-hover-color;
-  }
-}
+// .bg-warning {
+//   background-color: $badge-tags-bg-color;
+//   color:$badge-tags-text-color;
+//   &:hover{
+//     background-color: $badge-tags-bg-hover-color;
+//   }
+// }
