fix nav-link color for tabs

--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -170,6 +170,9 @@ img:hover+.changePicture,.changePicture:hover{
 
 .nav-tabs{
   border-color: $btn-border-color;
+  .nav-link{
+    color: $btn-text-color;
+  }
   .nav-link:hover,.nav-link:focus{
       cursor: pointer;
       background-color: $btn-bg-hover-color;
