FIX my profile component

--- a/daikoku/javascript/src/style/layout/navbar.scss
+++ b/daikoku/javascript/src/style/layout/navbar.scss
@@ -13,6 +13,7 @@ a.navbar-brand, #teamSelector:hover {
 
 .navbar {
   background-color: $navbar-bg-color;
+  padding: .5rem 1rem;
 }
 
 .logo-anonymous {
