better display for avatar

--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -153,6 +153,7 @@ a.nav-link.active {
 .changePicture {
    position:absolute;
    display:none;
+   top: 0;
 }
 
 img:hover+.changePicture,.changePicture:hover{
