--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -34,3 +34,4 @@
 @import 'components/footer.scss';
 @import 'components/discussion.scss';
 @import 'components/messages.scss';
+@import 'components/breadcrumb.scss';
