--- a/daikoku/javascript/src/style/components/apicard.scss
+++ b/daikoku/javascript/src/style/components/apicard.scss
@@ -137,3 +137,151 @@ a.card-link:hover, a.card-link:visited, a.card-link:link, a.card-link:active {
 }
 
 .card-img-top:hover .btn { display: block;}
+
+/* backoffice card */
+// .hoverable-card {
+//   position: relative;
+//   .test {
+//     position: absolute;
+//     height: 0;
+//     opacity: 0;
+//     background-color: $menu-bg-color;
+//     border: 1px solid $navbar-bg-color;
+//     border-radius: 5px 5px 0 0;
+//     padding-left: 15px;
+//     padding-top: 15px;
+//     top: 0;
+//     bottom: 0;
+//     left: 0;
+//     right: 0;
+//     display: flex;
+//     align-items: flex-start;
+//     justify-content: flex-start;
+//     flex-direction: column;
+//     flex-wrap: wrap;
+
+//     button {
+//       opacity: 0;
+//       width: 33%;
+//       text-align: left;
+//     }
+
+//     button+button {
+//       margin-top: 5px;
+//     } 
+//   }
+
+//   &:hover {
+//     .test {
+//       height: 100%;
+//       opacity: 1;
+//       transition: height .3s ease-in-out;
+
+//       button {
+//         opacity: 1;
+//         transition: opacity 0s ease-in-out .1s;
+//       }
+//     }
+//   }
+
+
+// }
+
+.burger-menu {
+  width: 60px;
+  height: 45px;
+  position: relative;
+  // margin: 50px auto;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+
+  span {
+    display: block;
+    position: absolute;
+    height: 9px;
+    width: 50%;
+    background: #d3531a;
+    opacity: 1;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+  }
+
+  span:nth-child(even) {
+    left: 50%;
+    border-radius: 0 9px 9px 0;
+  }
+
+  span:nth-child(odd) {
+    left:0px;
+    border-radius: 9px 0 0 9px;
+  }
+
+  span:nth-child(1), span:nth-child(2) {
+    top: 0px;
+  }
+
+  span:nth-child(3), span:nth-child(4) {
+    top: 18px;
+  }
+
+  span:nth-child(5), span:nth-child(6) {
+    top: 36px;
+  }
+
+  &.open span:nth-child(1),&.open span:nth-child(6) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+  &.open span:nth-child(2),&.open span:nth-child(5) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+
+  &.open span:nth-child(1) {
+    left: 5px;
+    top: 7px;
+  }
+
+  &.open span:nth-child(2) {
+    left: calc(50% - 5px);
+    top: 7px;
+  }
+
+  &.open span:nth-child(3) {
+    left: -50%;
+    opacity: 0;
+  }
+
+  &.open span:nth-child(4) {
+    left: 100%;
+    opacity: 0;
+  }
+
+  &.open span:nth-child(5) {
+    left: 5px;
+    top: 29px;
+  }
+
+  &.open span:nth-child(6) {
+    left: calc(50% - 5px);
+    top: 29px;
+  }
+}
