--- a/daikoku/javascript/src/style/components/notification.scss
+++ b/daikoku/javascript/src/style/components/notification.scss
@@ -1,10 +1,8 @@
 .notification-link, .messages-link {
-  width: 50px;
   color: $navbar-text-color;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 21px;
   position: relative;
 
   &:hover {
@@ -20,10 +18,10 @@
   display: block;
   position: absolute;
   top: -3px;
-  right: 10px;
+  right: 3px;
   background-color: $danger-color;
   border-radius: 50%;
-  border: 2px solid $navbar-bg-color;
+  border: 2px solid $navbar-text-color;
   box-sizing: content-box;
 }
 
