--- a/daikoku/javascript/src/style/layout/navbar.scss
+++ b/daikoku/javascript/src/style/layout/navbar.scss
@@ -78,11 +78,19 @@ a.navbar-brand, #teamSelector:hover {
 
 ///////////////////// new navbar
 
-.navbar-next {
-  height: '100vh';
-  background-color: $navbar-bg-color;
-  position: 'relative';
-  color: $navbar-text-color
+.navbar-container {
+  height: 100vh;
+  // background-color: $navbar-bg-color;
+  // position: 'relative';
+  // color: $navbar-text-color;
+
+
+  .navbar {
+    height: 100%;
+    width: 55px;
+    min-height: 300px;
+    overflow-y: hidden;
+  }
 }
 
 .navbar-panel {
@@ -92,14 +100,15 @@ a.navbar-brand, #teamSelector:hover {
   height: 100vh;
   z-index: 1000;
   top: 0;
-  left: 0;
+  left: 55px;
   background-color: #fff;
   color: #000;
 
   transition: width .2s ease-in-out;
 
   &.opened {
-    width: 35vw;
+    width: calc(35vw - 55px);
+    overflow-y: auto;
   }
 
   .navbar-panel__back {
@@ -156,6 +165,98 @@ a.navbar-brand, #teamSelector:hover {
           }
         }
       }
+    }
+  }
+}
+
+/// companion
+
+.navbar-companion {
+  z-index: 1000;
+  background-color: tomato;
+  height: 100vh;
+  position: relative;
+  min-width: 20px;
+  width: 20px; height: 100vh;
+  transition: width .2s ease-in-out;
+
+  &.opened {
+    width: 240px;
+
+    .companion-content {
+      opacity: 1;
+      transition: opacity 0s .2s;
+    }
+  }
+
+  .companion-content {
+    opacity: 0;
+    transition: opacity 0s 0s;
+    padding: .5rem 1rem 0 1rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .companion-title {
+      height: 40px;
+      margin-bottom: 1rem;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      line-height: 1.14286;
+      color: #fff;
+      font-weight: 600;
+    }
+
+
+    .blocks {
+      flex-grow: 1;
+      
+      .block {
+        .block__entries {
+          .block__entry__link {
+            cursor: pointer;
+            font-size: 14px;
+            color: #000;
+            margin-bottom: 5px;
+            line-height: 40px;
+            border-radius: 4px;
+            padding-left: .5rem;
+
+            &.active {
+              background-color: #EBECF0;
+              color: tomato;
+            }
+
+            &:hover {
+              background-color: #EBECF0;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .companion-button {
+    position: absolute; top: 20px; right: -12px; z-index: 1000;
+    width: 24px; height: 24px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background-color: #fff;
+    color: #000;
+    border: 1px solid rgba($color: #000000, $alpha: 0.1);
+
+    svg {
+      height: 14px;
+    }
+
+    &:hover {
+      background-color: steelblue;
+      color: #fff;
+      border: 1px solid midnightblue;
     }
   }
 }
