API front & back office works
Begin work on Team back office

--- a/daikoku/javascript/src/style/components/breadcrumb.scss
+++ b/daikoku/javascript/src/style/components/breadcrumb.scss
@@ -47,7 +47,12 @@
         background: $info-color;
       }
     }
-          
+       
+    .step-content {
+      line-height: 26px;
+      font-size: 14px;
+      font-weight: normal;
+    }
   }
   
 }
